CSS: Fix wrapping of some columns in release listings

--- a/data/style.css
+++ b/data/style.css
@@ -403,13 +403,13 @@ div#vntags                    { margin: 0 30px 0 30px; border-top: 1px solid $bo
 #screenshots table     { width: 100%; }
 .releases tr.lang td,
 #screenshots tr.rel td { background: $boxbg$; font-weight: bold; }
-.releases td.tc1       { padding-left: 30px; width: 80px; }
-.releases td.tc2       { text-align: center; width: 50px; }
+.releases td.tc1       { padding-left: 30px; width: 80px; white-space: nowrap }
+.releases td.tc2       { text-align: center; width: 50px; white-space: nowrap }
 .releases td.tc3       { text-align: right; padding: 0; width: 90px; }
 .releases td.tc_icons  { padding: 0 4px }
 .releases td.tc5       { width: 70px; }
 .releases td.tc5 a     { color: $maintext$; border: 0; }
-.releases td.tc6       { text-align: right; width: 25px; padding: 0; }
+.releases td.tc6       { text-align: right; width: 25px; padding: 0; white-space: nowrap }
 
 .rllinks_dd a { text-align: right; padding: 3px }
 .rllinks_dd span { color: $maintext$; padding-right: 10px }
@@ -524,11 +524,11 @@ div.scr_uploader     { visibility: hidden; overflow: hidden; width: 1px; height:
 #prodrel.collapse tr.vn i    { font-style: normal; display: block; float: left; width: 80px; padding: 0 0 0 40px; }
 #prodrel.collapse tr.vn span { display: inline; font-weight: normal; color: $grayedout$; padding: 0 0 0 5px }
 #prodrel.collapse tr.rel     { display: none }
-#prodrel td.tc1       { width:  80px; padding-left: 30px; }
-#prodrel td.tc2       { width:  50px; text-align: center; }
+#prodrel td.tc1       { width:  80px; padding-left: 30px; white-space: nowrap }
+#prodrel td.tc2       { width:  50px; text-align: center; white-space: nowrap }
 #prodrel td.tc3       { width: 120px; text-align: right;  padding: 0; }
 #prodrel td.tc5       { width: 120px; color: $grayedout$; }
-#prodrel td.tc6       { width:  25px; text-align: right; padding: 0; }
+#prodrel td.tc6       { width:  25px; text-align: right; padding: 0; white-space: nowrap }
 #expandprodrel        { float: right; font-weight: bold; padding-bottom: 2px; border: none }
 
 div.producerbrowse    { padding-bottom: 10px }
